--- a/Oddlect.css
+++ b/Oddlect.css
@@ -18,24 +18,23 @@ body{
 	
 }
 
-/*#baroutline{
+#barProgress{
 	background: #FFB0B0;
-	margin-right: -1px;
 	height: 48px;
 	margin-top: -16px;
 	margin-bottom: -7px;
-	/padding-left: 5px;
+	margin-right: -5px;
+	//padding-left: 5px;
+	
 }
 
 #bar{
 	background: #9EFF9E;
-	dbackground: blue;
 	height: 48px;
-	margin-top: -15px;
-	margin-bottom: -6px;
-	margin-left: -5px;
-	margin: 1px;
-}*/
+	margin-top: -16px;
+	margin-bottom: -7px;
+	//margin-right: -5px;
+}
 
 #numL{
 	position: absolute;
@@ -51,9 +50,9 @@ body{
 }
 
 #timer{
-	/*position: relative;
+	position: relative;
 	top: 15px;
-	left: 1px;*/
+	left: 1px;
 }
 
 #right{
