--- a/Oddlect.css
+++ b/Oddlect.css
@@ -133,6 +133,12 @@ p#oddlect{
 	//border: 1px solid black;
 }
 
+p#connect{
+	text-indent: 5px;
+	margin-top: -15px;
+	margin-bottom: 15px;
+}
+
 p#soon{
 	text-indent: 5px;
 	margin-top: -15px;
